fix: improve minimalrc

--- a/home/.minimalrc
+++ b/home/.minimalrc
@@ -1,3 +1,5 @@
+echo -n "Initializing"
+
 MYSH=$(readlink /proc/$$/exe)
 if [[ $MYSH =~ "zsh" ]]; then
 	is_zsh=1
@@ -8,29 +10,33 @@ fi
 if [[ -d "${HOME}/.path.d" ]]; then
 	for p in "${HOME}/.path.d"/*sh; do
 		ext=${p##*.}
-		program=$(basename "$p" "$ext")
-		echo -n " • ${program}"
+		program=$(basename "$p" ".$ext")
+		program=${program/#*_/}
 		case $ext in
 		"zsh")
 			if [[ $is_zsh -eq 1 ]]; then
-				echo "sourcing zsh version of ${p}"
+				# echo "sourcing zsh version of ${p}"
 				# shellcheck disable=1090
+				echo -n " • ${program}"
 				source "${p}"
 			fi
 			;;
 		"bash")
 			if [[ $is_zsh -eq 0 ]]; then
-				echo "sourcing bash version of ${p}"
+				# echo "sourcing bash version of ${p}"
 				# shellcheck disable=1090
+				echo -n " • ${program}"
 				source "${p}"
 			fi
 			;;
 		*)
-			echo "sourcing sh version of ${p}"
+			# echo "sourcing sh version of ${p}"
 			# shellcheck disable=1090
+			echo -n " • ${program}"
 			source "${p}"
 			;;
 		esac
 	done
 fi
 
+echo -n -e '\e[1G\e[2K\e[0m'
